--- a/src/lib/api-client/mock-data/measures.json
+++ b/src/lib/api-client/mock-data/measures.json
@@ -1,120 +1,140 @@
 [
   {
-    "id": "measure_001",
+    "id": 1,
+    "key": "measure_001",
     "name": "Congestion charges",
     "type": "PUSH",
     "imageUrl": "/icons/ticket.svg"
   },
   {
-    "id": "measure_002",
+    "id": 2,
+    "key": "measure_002",
     "name": "Parking charges",
     "type": "PUSH",
     "imageUrl": "/icons/parking_sign.svg"
   },
   {
-    "id": "measure_003",
+    "id": 3,
+    "key": "measure_003",
     "name": "Restricted parking",
     "type": "PUSH",
     "imageUrl": "/icons/no_cars.svg"
   },
   {
-    "id": "measure_004",
+    "id": 4,
+    "key": "measure_004",
     "name": "Limited traffic zone / Pedestrianisation of streets",
     "type": "PUSH",
     "imageUrl": "/icons/pedestrian.svg"
   },
   {
-    "id": "measure_005",
+    "id": 5,
+    "key": "measure_005",
     "name": "Parking supply management",
     "type": "PUSH",
     "imageUrl": "/icons/parking_sign.svg"
   },
   {
-    "id": "measure_006",
+    "id": 6,
+    "key": "measure_006",
     "name": "Speed limits",
     "type": "PUSH",
     "imageUrl": "/icons/30sign.svg"
   },
   {
-    "id": "measure_007",
+    "id": 7,
+    "key": "measure_007",
     "name": "Mobility hubs (see task T3.2)",
     "type": "PULL",
     "imageUrl": "/icons/cityz_zones.svg"
   },
   {
-    "id": "measure_008",
+    "id": 8,
+    "key": "measure_008",
     "name": "Scheduling integration in MaaS services (see task T2.3)",
     "type": "PULL",
     "imageUrl": "/icons/time_table.svg"
   },
   {
-    "id": "measure_009",
+    "id": 9,
+    "key": "measure_009",
     "name": "Ticketing integration in MaaS services (see task T3.4)",
     "type": "PULL",
     "imageUrl": "/icons/mobile.svg"
   },
   {
-    "id": "measure_010",
+    "id": 10,
+    "key": "measure_010",
     "name": "Improved NSM infrastructure, e.g. bike lanes & \"park & ride\"",
     "type": "PULL",
     "imageUrl": "/icons/bike_lane.svg"
   },
   {
-    "id": "measure_011",
+    "id": 11,
+    "key": "measure_011",
     "name": "On demand vehicle sharing action plan",
     "type": "PULL",
     "imageUrl": "/icons/mobile.svg"
   },
   {
-    "id": "measure_012",
+    "id": 12,
+    "key": "measure_012",
     "name": "Nudging (gamification or rewards)",
     "type": "PULL",
     "imageUrl": "/icons/kid1.svg"
   },
   {
-    "id": "measure_013",
+    "id": 13,
+    "key": "measure_013",
     "name": "Dynamic pricing of NSM",
     "type": "PULL",
     "imageUrl": "/icons/ticket.svg"
   },
   {
-    "id": "measure_014",
+    "id": 14,
+    "key": "measure_014",
     "name": "Improved information about the availability of shared modes",
     "type": "PULL",
     "imageUrl": "/icons/mobile.svg"
   },
   {
-    "id": "measure_015",
+    "id": 15,
+    "key": "measure_015",
     "name": "Introduction of new NSM services (ex. bike-sharing)",
     "type": "PULL",
     "imageUrl": "/icons/e-scooter.svg"
   },
   {
-    "id": "measure_016",
+    "id": 16,
+    "key": "measure_016",
     "name": "Introduction of new PT infrastructures/lines (ex. e-buses, LRT)",
     "type": "PULL",
     "imageUrl": "/icons/metro_tunnel.svg"
   },
   {
-    "id": "measure_017",
+    "id": 17,
+    "key": "measure_017",
     "name": "Streets retrofitting/introduction of priority lanes",
     "type": "PULL",
     "imageUrl": "/icons/cityz_zones.svg"
   },
   {
-    "id": "measure_018",
+    "id": 18,
+    "key": "measure_018",
     "name": "Dedicated parking spaces for carsharing/micromobility",
     "type": "PULL",
     "imageUrl": "/icons/bycicle_parking.svg"
   },
   {
-    "id": "measure_019",
+    "id": 19,
+    "key": "measure_019",
     "name": "Widening PT geographical area",
     "type": "PULL",
     "imageUrl": "/icons/metro_map.svg"
   },
   {
-    "id": "measure_020",
+    "id": 20,
+    "key": "measure_020",
     "name": "Central PT planning and construction program",
     "type": "PULL",
     "imageUrl": "/icons/cityz_zones.svg"
