--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.8",
     "astro": "^5.13.3",
+    "chart.js": "^4.5.0",
     "clsx": "^2.1.1",
     "motion": "^12.23.12",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.12"
   }
