--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
     "astro": "^5.13.3",
     "chart.js": "^4.5.0",
     "clsx": "^2.1.1",
+    "leaflet": "^1.9.4",
     "motion": "^12.23.12",
-    "react": "^19.1.1",
+    "react": "^19.0.0-rc.1",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.1.1",
+    "react-dom": "^19.0.0-rc.1",
+    "react-leaflet": "^5.0.0-rc.2",
     "tailwindcss": "^4.1.12"
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.20"
   }
 }
