feat: lab edition of measures form

--- a/src/lib/api-client/mock-data/measures.json
+++ b/src/lib/api-client/mock-data/measures.json
@@ -3,140 +3,160 @@
     "id": 1,
     "key": "measure_001",
     "name": "Congestion charges",
+    "description": "Fees imposed on vehicles entering designated city areas to reduce traffic congestion.",
     "type": "PUSH",
-    "imageUrl": "/icons/ticket.svg"
+    "image_url": "/icons/ticket.svg"
   },
   {
     "id": 2,
     "key": "measure_002",
     "name": "Parking charges",
+    "description": "Increased parking fees to discourage long-term car use and promote modal shift.",
     "type": "PUSH",
-    "imageUrl": "/icons/parking_sign.svg"
+    "image_url": "/icons/parking_sign.svg"
   },
   {
     "id": 3,
     "key": "measure_003",
     "name": "Restricted parking",
+    "description": "Reductions in available public parking to limit car access, especially in central zones.",
     "type": "PUSH",
-    "imageUrl": "/icons/no_cars.svg"
+    "image_url": "/icons/no_cars.svg"
   },
   {
     "id": 4,
     "key": "measure_004",
     "name": "Limited traffic zone / Pedestrianisation of streets",
+    "description": "Car-free or low-emission zones that prioritize pedestrians, cyclists, and shared mobility.",
     "type": "PUSH",
-    "imageUrl": "/icons/pedestrian.svg"
+    "image_url": "/icons/pedestrian.svg"
   },
   {
     "id": 5,
     "key": "measure_005",
     "name": "Parking supply management",
+    "description": "Policies that reduce or restructure parking supply to manage demand and encourage alternatives.",
     "type": "PUSH",
-    "imageUrl": "/icons/parking_sign.svg"
+    "image_url": "/icons/parking_sign.svg"
   },
   {
     "id": 6,
     "key": "measure_006",
     "name": "Speed limits",
+    "description": "Lowering vehicle speed limits to improve safety and promote non-motorized travel.",
     "type": "PUSH",
-    "imageUrl": "/icons/30sign.svg"
+    "image_url": "/icons/30sign.svg"
   },
   {
     "id": 7,
     "key": "measure_007",
     "name": "Mobility hubs (see task T3.2)",
+    "description": "Centralized locations where multiple transport modes (e.g., bikes, buses, taxis) are integrated.",
     "type": "PULL",
-    "imageUrl": "/icons/cityz_zones.svg"
+    "image_url": "/icons/cityz_zones.svg"
   },
   {
     "id": 8,
     "key": "measure_008",
     "name": "Scheduling integration in MaaS services (see task T2.3)",
+    "description": "Coordinated schedules across transport services to streamline connections.",
     "type": "PULL",
-    "imageUrl": "/icons/time_table.svg"
+    "image_url": "/icons/time_table.svg"
   },
   {
     "id": 9,
     "key": "measure_009",
     "name": "Ticketing integration in MaaS services (see task T3.4)",
+    "description": "Unified or digital ticketing across services to simplify travel.",
     "type": "PULL",
-    "imageUrl": "/icons/mobile.svg"
+    "image_url": "/icons/mobile.svg"
   },
   {
     "id": 10,
     "key": "measure_010",
     "name": "Improved NSM infrastructure, e.g. bike lanes & \"park & ride\"",
+    "description": "New infrastructure like bike lanes, “park & ride” stations to support non-car travel.",
     "type": "PULL",
-    "imageUrl": "/icons/bike_lane.svg"
+    "image_url": "/icons/bike_lane.svg"
   },
   {
     "id": 11,
     "key": "measure_011",
     "name": "On demand vehicle sharing action plan",
+    "description": "Access to shared vehicles (cars, bikes, e-scooters) on demand via apps or stations.",
     "type": "PULL",
-    "imageUrl": "/icons/mobile.svg"
+    "image_url": "/icons/mobile.svg"
   },
   {
     "id": 12,
     "key": "measure_012",
     "name": "Nudging (gamification or rewards)",
+    "description": "Use of rewards or games to encourage use of shared or sustainable transport.",
     "type": "PULL",
-    "imageUrl": "/icons/kid1.svg"
+    "image_url": "/icons/kid1.svg"
   },
   {
     "id": 13,
     "key": "measure_013",
     "name": "Dynamic pricing of NSM",
+    "description": "Flexible pricing (e.g., cheaper off-peak rides) to balance demand and promote use.",
     "type": "PULL",
-    "imageUrl": "/icons/ticket.svg"
+    "image_url": "/icons/ticket.svg"
   },
   {
     "id": 14,
     "key": "measure_014",
     "name": "Improved information about the availability of shared modes",
+    "description": "Real-time data on vehicle availability and travel options via digital platforms.",
     "type": "PULL",
-    "imageUrl": "/icons/mobile.svg"
+    "image_url": "/icons/mobile.svg"
   },
   {
     "id": 15,
     "key": "measure_015",
     "name": "Introduction of new NSM services (ex. bike-sharing)",
+    "description": "Launch of bike-sharing, scooter-sharing, or other new transport options.",
     "type": "PULL",
-    "imageUrl": "/icons/e-scooter.svg"
+    "image_url": "/icons/e-scooter.svg"
   },
   {
     "id": 16,
     "key": "measure_016",
     "name": "Introduction of new PT infrastructures/lines (ex. e-buses, LRT)",
+    "description": "Deployment of new public transport lines like electric buses or tram extensions.",
     "type": "PULL",
-    "imageUrl": "/icons/metro_tunnel.svg"
+    "image_url": "/icons/metro_tunnel.svg"
   },
   {
     "id": 17,
     "key": "measure_017",
     "name": "Streets retrofitting/introduction of priority lanes",
+    "description": "Street redesign for better walking/cycling and priority lanes for buses or shared modes.",
     "type": "PULL",
-    "imageUrl": "/icons/cityz_zones.svg"
+    "image_url": "/icons/cityz_zones.svg"
   },
   {
     "id": 18,
     "key": "measure_018",
     "name": "Dedicated parking spaces for carsharing/micromobility",
+    "description": "Reserved spaces to support the use of shared cars or micromobility vehicles.",
     "type": "PULL",
-    "imageUrl": "/icons/bycicle_parking.svg"
+    "image_url": "/icons/bycicle_parking.svg"
   },
   {
     "id": 19,
     "key": "measure_019",
     "name": "Widening PT geographical area",
+    "description": "Extending public transport coverage to reach underserved zones.",
     "type": "PULL",
-    "imageUrl": "/icons/metro_map.svg"
+    "image_url": "/icons/metro_map.svg"
   },
   {
     "id": 20,
     "key": "measure_020",
     "name": "Central PT planning and construction program",
+    "description": "Comprehensive public transport network planning to enhance coordination and efficiency.",
     "type": "PULL",
-    "imageUrl": "/icons/cityz_zones.svg"
+    "image_url": "/icons/cityz_zones.svg"
   }
 ]
