--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.20"
+    "@types/leaflet": "^1.9.20",
+    "prisma": "^6.16.2"
   }
 }
